--- a/MoonRunner/Base.lproj/Main.storyboard
+++ b/MoonRunner/Base.lproj/Main.storyboard
@@ -144,6 +144,9 @@
                                         <subviews>
                                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="4r1-D9-m5s">
                                                 <rect key="frame" x="0.0" y="0.0" width="323" height="164.5"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="uBb-oE-18m" id="EtE-h2-mcd"/>
+                                                </connections>
                                             </mapView>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
