--- a/MoonRunner/Base.lproj/Main.storyboard
+++ b/MoonRunner/Base.lproj/Main.storyboard
@@ -103,31 +103,31 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kIl-d4-PvH" userLabel="badge view">
-                                            <rect key="frame" x="8" y="8" width="64" height="64"/>
+                                            <rect key="frame" x="20" y="8" width="64" height="64"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="kIl-d4-PvH" secondAttribute="height" multiplier="1:1" id="csG-vR-AQH"/>
                                             </constraints>
                                         </imageView>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spaceship-silver" translatesAutoresizingMaskIntoConstraints="NO" id="3L8-Gd-pDf" userLabel="silver view">
-                                            <rect key="frame" x="57" y="8" width="32" height="32"/>
+                                            <rect key="frame" x="84" y="8" width="32" height="32"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="3L8-Gd-pDf" secondAttribute="height" multiplier="1:1" id="dxm-kx-KSJ"/>
                                             </constraints>
                                         </imageView>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spaceship-gold" translatesAutoresizingMaskIntoConstraints="NO" id="ogn-tx-89a" userLabel="gold view">
-                                            <rect key="frame" x="57" y="40" width="32" height="32"/>
+                                            <rect key="frame" x="84" y="40" width="32" height="32"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="ogn-tx-89a" secondAttribute="height" multiplier="1:1" id="SJu-if-eKv"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zrF-2h-3hG">
-                                            <rect key="frame" x="97" y="14" width="45" height="21"/>
+                                            <rect key="frame" x="124" y="14" width="45" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Earned" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xT8-ev-QKh">
-                                            <rect key="frame" x="97" y="46" width="54" height="21"/>
+                                            <rect key="frame" x="124" y="46" width="54" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
@@ -142,10 +142,10 @@
                                         <constraint firstItem="kIl-d4-PvH" firstAttribute="top" secondItem="a18-11-axK" secondAttribute="top" constant="8" id="LRo-CU-Jbb"/>
                                         <constraint firstItem="ogn-tx-89a" firstAttribute="height" secondItem="kIl-d4-PvH" secondAttribute="height" multiplier="0.5" id="MoV-yO-bvi"/>
                                         <constraint firstItem="ogn-tx-89a" firstAttribute="top" secondItem="3L8-Gd-pDf" secondAttribute="bottom" id="QlG-aq-Lza"/>
-                                        <constraint firstItem="3L8-Gd-pDf" firstAttribute="leading" secondItem="kIl-d4-PvH" secondAttribute="trailing" constant="-15" id="UBs-F9-9V2"/>
+                                        <constraint firstItem="3L8-Gd-pDf" firstAttribute="leading" secondItem="kIl-d4-PvH" secondAttribute="trailing" id="UBs-F9-9V2"/>
                                         <constraint firstItem="xT8-ev-QKh" firstAttribute="centerY" secondItem="ogn-tx-89a" secondAttribute="centerY" id="c4K-u5-lPD"/>
                                         <constraint firstItem="ogn-tx-89a" firstAttribute="leading" secondItem="3L8-Gd-pDf" secondAttribute="leading" id="cNV-Z3-sx0"/>
-                                        <constraint firstItem="kIl-d4-PvH" firstAttribute="leading" secondItem="a18-11-axK" secondAttribute="leading" constant="8" id="dtk-p4-Kn0"/>
+                                        <constraint firstItem="kIl-d4-PvH" firstAttribute="leading" secondItem="a18-11-axK" secondAttribute="leading" constant="20" symbolic="YES" id="dtk-p4-Kn0"/>
                                         <constraint firstItem="zrF-2h-3hG" firstAttribute="leading" secondItem="3L8-Gd-pDf" secondAttribute="trailing" constant="8" id="uMe-xT-L0P"/>
                                     </constraints>
                                 </tableViewCellContentView>
