--- a/MoonRunner/Base.lproj/Main.storyboard
+++ b/MoonRunner/Base.lproj/Main.storyboard
@@ -156,6 +156,7 @@
                                     <outlet property="goldImageView" destination="ogn-tx-89a" id="oHJ-B9-h73"/>
                                     <outlet property="nameLabel" destination="zrF-2h-3hG" id="dgP-vg-ab6"/>
                                     <outlet property="silverImageView" destination="3L8-Gd-pDf" id="1V6-Zu-GER"/>
+                                    <segue destination="NeR-aF-aed" kind="show" identifier="BadgeDetailsViewController" id="Dsw-xc-1JS"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -168,6 +169,126 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uud-2v-ARu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1994.4000000000001" y="472.71364317841085"/>
+        </scene>
+        <!--Badge Details View Controller-->
+        <scene sceneID="Isf-gk-GFY">
+            <objects>
+                <viewController id="NeR-aF-aed" customClass="BadgeDetailsViewController" customModule="MoonRunner" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xRQ-pT-P3g"/>
+                        <viewControllerLayoutGuide type="bottom" id="QQC-pt-6HQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="V2z-2v-xIy">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Qmk-YQ-xUy">
+                                <rect key="frame" x="0.0" y="64" width="375" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Qmk-YQ-xUy" secondAttribute="height" multiplier="3:2" id="akm-GQ-1Dr"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gum-Fl-fNg">
+                                <rect key="frame" x="159" y="322" width="58.5" height="26.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="aT8-5h-b80">
+                                <rect key="frame" x="16" y="356.5" width="343" height="290.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RX4-5F-TTB">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="51.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Earned" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cNj-yN-r5W">
+                                        <rect key="frame" x="0.0" y="59.5" width="343" height="52"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Best" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H8V-Tt-lbQ">
+                                        <rect key="frame" x="0.0" y="119.5" width="343" height="51.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uKy-hO-92J">
+                                        <rect key="frame" x="0.0" y="179" width="343" height="52"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Silver" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rxh-Qh-8uI">
+                                                <rect key="frame" x="0.0" y="0.0" width="291.5" height="52"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spaceship-silver" translatesAutoresizingMaskIntoConstraints="NO" id="O8m-af-Pf0">
+                                                <rect key="frame" x="291.5" y="0.0" width="51.5" height="52"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="O8m-af-Pf0" secondAttribute="height" multiplier="1:1" id="vUT-e6-7H1"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jlo-Nf-WZS">
+                                        <rect key="frame" x="0.0" y="239" width="343" height="51.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gold" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G8g-dm-Z2i">
+                                                <rect key="frame" x="0.0" y="0.0" width="291.5" height="51.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spaceship-gold" translatesAutoresizingMaskIntoConstraints="NO" id="tT3-uJ-gw0">
+                                                <rect key="frame" x="291.5" y="0.0" width="51.5" height="51.5"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="tT3-uJ-gw0" secondAttribute="height" multiplier="1:1" id="MVy-qQ-yib"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Otz-oL-b1F">
+                                <rect key="frame" x="307" y="247" width="60" height="59"/>
+                                <state key="normal" image="info"/>
+                                <connections>
+                                    <action selector="infoButtonTapped" destination="NeR-aF-aed" eventType="touchUpInside" id="3F9-xb-Fab"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="QQC-pt-6HQ" firstAttribute="top" secondItem="aT8-5h-b80" secondAttribute="bottom" constant="20" id="4lx-xQ-UUw"/>
+                            <constraint firstAttribute="trailing" secondItem="Qmk-YQ-xUy" secondAttribute="trailing" id="7oT-U2-hU3"/>
+                            <constraint firstItem="Qmk-YQ-xUy" firstAttribute="leading" secondItem="V2z-2v-xIy" secondAttribute="leading" id="7qd-Ju-v0o"/>
+                            <constraint firstItem="aT8-5h-b80" firstAttribute="leading" secondItem="V2z-2v-xIy" secondAttribute="leadingMargin" id="CiB-n5-HLc"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="aT8-5h-b80" secondAttribute="trailing" id="ET4-BD-5dN"/>
+                            <constraint firstItem="Gum-Fl-fNg" firstAttribute="top" secondItem="Qmk-YQ-xUy" secondAttribute="bottom" constant="8" id="IJy-1D-Rk7"/>
+                            <constraint firstItem="Qmk-YQ-xUy" firstAttribute="top" secondItem="xRQ-pT-P3g" secondAttribute="bottom" id="N4B-7d-gyV"/>
+                            <constraint firstItem="aT8-5h-b80" firstAttribute="top" secondItem="Gum-Fl-fNg" secondAttribute="bottom" constant="8" id="aSE-tL-hle"/>
+                            <constraint firstItem="Gum-Fl-fNg" firstAttribute="centerX" secondItem="V2z-2v-xIy" secondAttribute="centerX" id="nHC-bA-8Su"/>
+                            <constraint firstItem="Otz-oL-b1F" firstAttribute="bottom" secondItem="Qmk-YQ-xUy" secondAttribute="bottom" constant="-8" id="seC-Dn-ZkC"/>
+                            <constraint firstItem="Otz-oL-b1F" firstAttribute="trailing" secondItem="Qmk-YQ-xUy" secondAttribute="trailing" constant="-8" id="xct-gV-2C5"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="badgeImageView" destination="Qmk-YQ-xUy" id="g4b-ib-fb7"/>
+                        <outlet property="bestLabel" destination="H8V-Tt-lbQ" id="FU0-a7-fSo"/>
+                        <outlet property="distanceLabel" destination="RX4-5F-TTB" id="9GI-jL-hlK"/>
+                        <outlet property="earnedLabel" destination="cNj-yN-r5W" id="mv5-fH-xLA"/>
+                        <outlet property="goldImageView" destination="tT3-uJ-gw0" id="P2r-3n-p3f"/>
+                        <outlet property="goldLabel" destination="G8g-dm-Z2i" id="ZHQ-U1-94S"/>
+                        <outlet property="nameLabel" destination="Gum-Fl-fNg" id="Yz0-R1-AvH"/>
+                        <outlet property="silverImageView" destination="O8m-af-Pf0" id="2a2-ao-RZQ"/>
+                        <outlet property="silverLabel" destination="Rxh-Qh-8uI" id="OmY-Hq-RaO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fwL-1y-SFQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1087.2" y="472.71364317841085"/>
         </scene>
         <!--New Run View Controller-->
         <scene sceneID="Qhi-ay-UJd">
@@ -408,6 +529,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="info" width="60" height="59"/>
         <image name="spaceship-gold" width="100" height="137"/>
         <image name="spaceship-silver" width="100" height="137"/>
     </resources>
